# AH_web_development_assignment

./: .dockerignore  .env.example  .gitignore  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
ai_models/: model.py
alembic/: README.md  env.py
alembic/versions/: 566f4a97b76d_create_initial_model.py  7710376f1f2f_create_initial_models.py  ad57100c9396_create_user_patient_medicalrecord_.py  e3eb78289e2c_add_aianalysis_model_fix_cascade_option.py  fb5ceed67a4f_initial_model_create.py
app/: Dockerfile  main.py
app/apis/: admin.py  deps.py  medical_records.py  patients.py  practice_apis.py  users.py
app/apis/routers/: __init__.py  admin.py  medical_records.py  patients.py  users.py
app/core/: config.py  enums.py  redis_client.py  security.py  utils.py
app/core/db/: databases.py  models.py
app/models/: __init__.py  ai_analysis_results.py  medical_records.py  patients.py  users.py
app/repositories/: ai_analysis_repository.py  medical_record_repository.py  patient_repository.py  user_repository.py
app/schemas/: ai_analysis_results.py  medical_records.py  patients.py  users.py
app/services/: ai_analysis_service.py  medical_record_service.py  patient_service.py  user_service.py
app/static/: apis.js  app.js  index.html
app/static/templates/: login.html  (+4 more)
app/templates/: index.html
docs/: ai_predict_api_specification.md  medical_record_api_specification.md  patient_api_specification.md  user_api_specification.md
nginx/: default.conf
static/: app.js  index.html  pages.js
static/templates/: signup.html
worker/: Dockerfile  main.py  model.py  redis_client.py
worker/models/: pneumonia_model.pth
