[project]
name = "ai-health-web-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncmy>=0.2.11",
    "pillow>=12.2.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "redis>=7.4.0",
]

[dependency-groups]
app = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "cryptography>=46.0.6",
    "fastapi[standard]>=0.135.3",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.5.0",
    "uuid6>=2025.0.1",
]
ai = [
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "redis>=7.4.0"
]

# PyTorch CPU 버젼 설치를 위해 인덱스를 정의
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true  # 다른 패키지가 실수로 여기서 설치되는 것을 방지

# 패키지 설치시 상기 인덱스를 사용하도록 강제
[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[tool.ruff]
# 기본 라인 길이 설정
line-length = 120
target-version = "py312"
